# large-audio-player

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json
src/: App.tsx  styles.css  tauri.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: WaveformCanvas.tsx
src/lib/: tauriBridge.ts
tools/: copy_with_cooldown.sh
