[package]
name = "wav-player"
version = "0.1.0"
description = "Large file audio player"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rodio = "0.21.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.5", features = ["mp3", "wav"] }
tauri = { version = "2" }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
